fixed overflow bug on body

--- a/src/index.css
+++ b/src/index.css
@@ -26,7 +26,7 @@
 }
 body {
   background: var(--white);
-  overflow: hidden;
+  overflow-x: hidden;
 }
 
 *, body {
